[gd_scene load_steps=2 format=3 uid="uid://cwosfpoyc882s"]

[ext_resource type="Script" path="res://setting.gd" id="1_xvdh3"]

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvdh3")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -49.5
offset_right = -33.0
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="Master Volume" type="Label" parent="BoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Master volume
"

[node name="Music Volume" type="Label" parent="BoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Music Volume
"

[node name="Sound SFX" type="Label" parent="BoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Sound SFX "

[node name="Return" type="Button" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 612.0
offset_right = 981.0
offset_bottom = 643.0
text = "Return"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -46.0
offset_right = 103.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="Master" type="HSlider" parent="VBoxContainer"]
modulate = Color(0, 0.866667, 0.435294, 1)
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="Music" type="HSlider" parent="VBoxContainer"]
modulate = Color(1.34766e-06, 0.865929, 0.435475, 1)
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="SoundSFX" type="HSlider" parent="VBoxContainer"]
modulate = Color(0, 0.866667, 0.435294, 1)
layout_mode = 2
min_value = -80.0
max_value = 0.0

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="value_changed" from="VBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundSFX" to="." method="_on_sound_sfx_value_changed"]
